small alignment fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,5 @@
 .header-container {
     margin-top: 1rem;
-    margin-bottom: 3rem;
 }
 
 .content-container {
